--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.170.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.170.0-alpha.0"
   }
 }
